--- a/userModule/pom.xml
+++ b/userModule/pom.xml
@@ -8,11 +8,11 @@
         <version>4.0.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>reservationApp</groupId>
-    <artifactId>reservationApp</artifactId>
+    <groupId>userModule</groupId>
+    <artifactId>userModule</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>reservationApp</name>
-    <description>reservationApp</description>
+    <name>userModule</name>
+    <description>userModule</description>
     <url/>
     <licenses>
         <license/>
@@ -62,12 +62,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webmvc-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>userModule</groupId>
-            <artifactId>userModule</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
