--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=reservationApp
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/reservationDB
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.username=
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
