--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ hs_err_pid*
 replay_pid*
 .idea/vcs.xml
 client/src/assets/video/final.mov
+AccommodationModule/src/test/resources/application.properties
